--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,26 @@
 server:
   port: 8080
 
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
+        show_sql: false
+        use_sql_comments: true
+        format_sql: true
+        type: warn
+
+  datasource:
+    url: REPLACE_ME
+    username: REPLACE_ME
+    password: REPLACE_ME
+
 telegram:
   bot:
     token: REPLACE_ME
